@@ -1,3 +1,7 @@
+2005-11-09 Kimmo
+ PATCH: [ 1351769 ] Manual: Minor update to file compare chapter
+  Manual: Compare_files.xml
+
 2005-11-08 Kimmo
  PATCH: [ 1350794 ] Manual: Update About doc chapter
   Manual: About_Doc.xml
